src/k8s/item-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itemservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/itemservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: storage-app-item-service
            port: 
              number: 8080
